# flag-on-caret-rs

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  README.RU.md  README.md  build.rs
.github/workflows/: release.yml
installer/: FlagOnCaret.iss
src/: caret.rs  langcode.rs  main.rs
