[package]
name = "flag-on-caret"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "LGPL-3.0-or-later"
description = "Keyboard-layout flag at the text caret and on the mouse cursor. Rust port of the FlagOnCaret feature extracted from LangBarXX."
repository = "https://github.com/n0isy/flag-on-caret-rs"

[[bin]]
name = "FlagOnCaret"
path = "src/main.rs"

[dependencies]
trayicon = "0.4"

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_Globalization",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
