[package]
name = "flag-on-caret"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "LGPL-3.0-or-later"
description = "Keyboard-layout flag at the text caret and on the mouse cursor. Rust port of the FlagOnCaret feature extracted from LangBarXX."
repository = "https://github.com/n0isy/flag-on-caret-rs"

[[bin]]
name = "FlagOnCaret"
path = "src/main.rs"

[dependencies]
trayicon = "0.4"

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_StationsAndDesktops",
    "Win32_Globalization",
]

# Full `windows` crate is used only for the COM-heavy caret detection
# (UI Automation + MSAA), where typed interfaces beat raw vtable juggling.
[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
